jfrog-yamls/jfrog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfrog-service
  namespace: jfrog-namespace
spec:
  selector:
    app: jfrog-artifactory
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
    - name: docker
      protocol: TCP
      port: 8081
      targetPort: 8081
