jfrog-yamls/jfrog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfrog-ingress  
  namespace: jfrog-namespace  
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jfrog-ortuser11.octopus.lab
    - docker-ortuser11.octopus.lab
    secretName: jfrog-tls
  rules:
  - host: jfrog-ortuser11.octopus.lab
    http:
      paths:
      - path: /                       # Path for routing traffic
        pathType: Prefix              # Type of path matching
        backend:
          service:
            name: jfrog-service     # Service to route traffic to
            port:
              number: 80            # Port on the service to forward traffic to
